grammar.js
/**
 * Wisp (SRFI-119) grammar for tree-sitter.
 *
 * Layout-first concrete syntax tree. Every source construct is a node
 * (`line`, `block`, `continuation`, `colon_list`, `paren_list`, ...)
 * rather than a semantic s-expression tree. The s-expression view is
 * recovered via queries, never the reverse.
 *
 * The external scanner (src/scanner.c) emits zero-width _newline/_indent/
 * _dedent tokens from the line structure; all other tokens come from the
 * generated lexer. Wisp disables itself inside brackets and strings, so
 * paren/bracket/curly/vector/string tokens absorb embedded newlines and
 * the scanner is never consulted there.
 */
module.exports = grammar({
  name: "wisp",
  externals: ($) => [
    $._indent,
    $._dedent,
    $._newline,
    $.line_prefix,
  ],
  // ":" may start a nested colon group or close the current one; the
  // reference implementation nests them, and the reduce branch dead-ends
  // (the enclosing line requires its newline next), so the nested
  // interpretation is the only successful one.
  conflicts: ($) => [[$.colon_list]],




  extras: ($) => [/\s/, $.comment, $.block_comment],

  rules: {
    source_file: ($) =>
      seq(
        optional($.shebang),
        repeat(choice($.line, $.continuation)),
      ),

    shebang: ($) => token(prec(1, /#![^\n]*/)),

    // One logical line: optional underscore indent, optional prefix, then
    // either a head datum followed by further items, or a headless colon
    // list; then a terminating newline (synthesized by the scanner at
    // EOF) and an optional block of indented child lines. The newline is
    // required: it is what lets the parser distinguish the end of a line
    // from more items.
    line: ($) =>
      seq(
        optional($.underscore_indent),
        optional($.line_prefix),
        choice(
          seq(
            field("head", $._datum),
            repeat($._datum),
            // A colon group absorbs every datum up to the end of the
            // line (wisp.py nests the rest of the line inside it), so
            // it can only appear once, after all plain datums.
            optional($.colon_list),
          ),
          $.colon_list,
        ),
        $._newline,
        optional($.block),
      ),

    // A line starting with ". " splices its items into the enclosing list.
    continuation: ($) =>
      seq(
        optional($.underscore_indent),
        ".",
        repeat($._datum),
        optional($.colon_list),
        $._newline,
        optional($.block),
      ),

    // An inline or line-leading colon opens a list closed at end of line.
    // A nested ":" inside the group opens another group (wisp.py nests).
    colon_list: ($) =>
      seq(":", repeat(choice($._datum, $.colon_list))),


    // Indented children of a line.
    block: ($) =>
      seq(
        $._indent,
        repeat(choice($.line, $.continuation)),
        $._dedent,
      ),

    // A run of "_" at the very start of a line followed by a literal
    // space counts as indentation (wisp.py replaces it with spaces).
    // The token is generated by the lexer, not the scanner: the
    // scanner's indent measurement consumes the run to count its
    // columns, and there is no way to rewind to it afterwards.
    underscore_indent: ($) => token(prec(1, /_+ /)),

    _datum: ($) =>
      choice(
        $.number,
        $.string,
        $.char,
        $.vector,
        $.paren_list,
        $.bracket_list,
        $.curly_list,
        $.atom,
      ),

    // Parenthesized s-expressions; wisp parsing is disabled inside.
    paren_list: ($) =>
      seq("(", repeat($._datum), optional(seq(".", $._datum)), ")"),

    bracket_list: ($) =>
      seq("[", repeat($._datum), optional(seq(".", $._datum)), "]"),

    // SRFI-105 curly-infix expression; syntax preserved, not transformed.
    curly_list: ($) => seq("{", repeat($._datum), "}"),

    // #(...), #u8(...), #s(...) and friends.
    vector: ($) =>
      seq(
        /#[^\s\(\)\[\]\{\}"]*\(/,
        repeat($._datum),
        optional(seq(".", $._datum)),
        ")",
      ),

    atom: ($) => /[^\s\(\)\[\]\{\}";]+/,

    number: ($) =>
      token(prec(1, /[+-]?(?:\d+(?:\.\d*)?|\.\d+)(?:[eE][+-]?\d+)?/)),

    string: ($) => /"([^"\\]|\\.)*"/,

    char: ($) => token(prec(1, /#\\[^\s\(\)\[\]\{\}"]+/)),

    comment: ($) => /;[^\n]*/,

    block_comment: ($) => /#\|(.|\n)*\|#/,
  },
});
